--- a/my/paginas/marketing/index.html
+++ b/my/paginas/marketing/index.html
@@ -196,7 +196,7 @@
       <li>
         <a href="https://www.ecommercebrasil.com.br/" target="_blank">
           <div class="resource-icon">
-            <img src="https://scontent.fcwb1-1.fna.fbcdn.net/v/t1.0-1/p200x200/17796306_1531704723506287_766375710109810577_n.png?_nc_cat=105&_nc_ht=scontent.fcwb1-1.fna&oh=410a02cac7be4ccbe2728bfa4bddff66&oe=5D37321F" alt="#" />
+            <img src="https://scontent.fcwb2-1.fna.fbcdn.net/v/t1.0-1/p320x320/17796306_1531704723506287_766375710109810577_n.png?_nc_cat=105&_nc_ohc=oV9d6OOtpwMAQk3Hd3itWTjO0D-FBqWUlHEZ8bNihRuc95dFeVhbPmi2g&_nc_ht=scontent.fcwb2-1.fna&oh=79d291956a3922976f9d0337239e1d18&oe=5E6C7470" alt="#" />
           </div>
         </a>
         <div class="resource-details">
