--- a/my/paginas/marketing/index.html
+++ b/my/paginas/marketing/index.html
@@ -211,7 +211,7 @@
       <li>
         <a href="https://www.publicitarioscriativos.com/" target="_blank">
           <div class="resource-icon">
-            <img src="https://scontent.fcwb1-1.fna.fbcdn.net/v/t1.0-1/p200x200/15032643_1353020718049826_2846259359469285587_n.png?_nc_cat=107&_nc_ht=scontent.fcwb1-1.fna&oh=8d81d4c3e7f6fe25fa73573763f403c5&oe=5D6CA1D5" alt="#" />
+            <img src="https://scontent.fcwb1-1.fna.fbcdn.net/v/t1.0-1/p200x200/15032643_1353020718049826_2846259359469285587_n.png?_nc_cat=107&_nc_ohc=8sM4R06vurUAQkpfgDdQmtMUyy3CtT3lFHF-D8AeX8_sf20-6qxpHkquw&_nc_ht=scontent.fcwb1-1.fna&oh=a0f2bc7dc5d4e4d25a950b3548032547&oe=5EA909D5" alt="#" />
           </div>
         </a>
         <div class="resource-details">
