--- a/my/paginas/marketing/index.html
+++ b/my/paginas/marketing/index.html
@@ -241,7 +241,7 @@
       <li>
         <a href="https://marketingdeconteudo.com/blogs-sobre-marketing/?utm_content=77161851&utm_medium=social&utm_source=twitter" target="_blank">
           <div class="resource-icon">
-            <img src="https://scontent.fcwb1-1.fna.fbcdn.net/v/t1.0-1/p200x200/36931364_1036299226533351_7053254834622824448_n.png?_nc_cat=108&_nc_ht=scontent.fcwb1-1.fna&oh=05f318f0789731de0bc4680537bba671&oe=5D38CFC3" alt="#" />
+            <img src="https://scontent.fcwb1-1.fna.fbcdn.net/v/t1.0-1/p320x320/67496708_1343133669183237_5266201796971331584_n.png?_nc_cat=105&_nc_ohc=XkR9MgFXMdsAQltqsVHTDsWazoI1zpiqbQO-WmiTUFQcrQ0gjwj6qTdlw&_nc_ht=scontent.fcwb1-1.fna&oh=c297f6623e5f2da68b68c06978b94dc6&oe=5E9FCED3" alt="#" />
           </div>
         </a>
         <div class="resource-details">
