--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -2115,6 +2115,36 @@
       </li>
 
       <li>
+        <a href="https://www.docker.com/" target="_blank">
+          <div class="resource-icon">
+            <img src="https://scontent.fcwb2-1.fna.fbcdn.net/v/t1.0-1/p320x320/65467832_2420859664814819_2002543499785797632_o.png?_nc_cat=102&_nc_ohc=rAKoHGzYyY0AQlqapSC_iRJdOwauW7Qzrhf78dB00GPnUmwppBlpK5uig&_nc_ht=scontent.fcwb2-1.fna&oh=c1137b305ecd8f63e9c74ac00252487b&oe=5EAC0AEE" alt="#" />
+          </div>
+        </a>
+        <div class="resource-details">
+          <h2>
+            <a href="https://www.docker.com/" target="_blank">Docker</a>
+          </h2>
+          <p>Plataforma de virtualização isolada (Criação de containers)</p>
+        </div>
+        <a class="resource-button" href="https://www.docker.com/" target="_blank">Veja</a>
+      </li>
+     
+      <li>
+        <a href="https://kubernetes.io/pt/" target="_blank">
+          <div class="resource-icon">
+            <img src="https://scontent.fcwb2-2.fna.fbcdn.net/v/t1.0-1/p320x320/54070326_277534686494510_4369718654871273472_n.png?_nc_cat=110&_nc_ohc=ky1Qz8Ilyi0AQnZrW9wcToJfWp3vGQbIJlVO_RuYXdWqCnvxsyo0qgJFg&_nc_ht=scontent.fcwb2-2.fna&oh=7bb3ed2253a87dc218c08dc95b7508bf&oe=5EAAB97F" alt="#" />
+          </div>
+        </a>
+        <div class="resource-details">
+          <h2>
+            <a href="https://kubernetes.io/pt/" target="_blank">Kubernetes</a>
+          </h2>
+          <p>Gerenciador de Containers (Docker)</p>
+        </div>
+        <a class="resource-button" href="https://kubernetes.io/pt/" target="_blank">Veja</a>
+      </li>
+     
+      <li>
         <a href="https://stateofjs.com/" target="_blank">
           <div class="resource-icon">
             <img src="../../base/images/portfolios.jpg" alt="#" />
