--- a/my/paginas/marketing/index.html
+++ b/my/paginas/marketing/index.html
@@ -403,7 +403,7 @@
       <li>
         <a href="https://mailchimp.com/" target="_blank">
           <div class="resource-icon">
-            <img src="https://scontent.fcwb1-1.fna.fbcdn.net/v/t1.0-1/p200x200/42600271_10155776890365777_3995720217064898560_n.jpg?_nc_cat=1&_nc_ht=scontent.fcwb1-1.fna&oh=b7ddb16202a48593d4b13ac6f2f14c91&oe=5D2A9156" alt="#" />
+            <img src="https://scontent.fcwb2-1.fna.fbcdn.net/v/t1.0-1/12688245_697669143706208_1707931773508486678_n.png?_nc_cat=101&_nc_ohc=8IltJ-QHDbwAQm_1vKY80smUanvwuuHSG-VrKGVHyrTDSqjfl0drsKn2A&_nc_ht=scontent.fcwb2-1.fna&oh=bfe08a1525b331aad1de8965622198f7&oe=5E6728B4" alt="#" />
           </div>
         </a>
         <div class="resource-details">
