--- a/my/paginas/design/index.html
+++ b/my/paginas/design/index.html
@@ -610,7 +610,7 @@ Ilustração Digital</a>
       <li>
         <div class="resource-icon">
           <a href="https://designculture.com.br/acabe-seus-problemas-com-conversoes-de-cores/" target="_blank">
-            <img src="https://scontent.fbfh14-2.fna.fbcdn.net/v/t1.0-1/p200x200/49184543_2476772522338289_2418004654219591680_o.jpg?_nc_cat=109&_nc_ohc=0juuoC-fNTAAQl8DFtuhGDfg2pHbwDCrnk2AQnIZ-u0bcRO8CQk1npOpw&_nc_ht=scontent.fbfh14-2.fna&oh=cf7175b471dce263a7dd140f639fb4a4&oe=5E8AB10E" alt="#" />
+            <img src="https://scontent.fcwb2-2.fna.fbcdn.net/v/t1.0-1/p320x320/49184543_2476772522338289_2418004654219591680_o.jpg?_nc_cat=109&_nc_ohc=0ZhsvysQoZsAQmkuL60BohnkbsCqSLmEOviiJeZg9dxYRkvPLg6bNoxMw&_nc_ht=scontent.fcwb2-2.fna&oh=ae5e9064b2bd6e710894f21031f70702&oe=5E9A6DA5" alt="#" />
           </a>
         </div>
         <div class="resource-details">
