Atualização perfil dos professores

--- a/my/paginas/design/index.html
+++ b/my/paginas/design/index.html
@@ -678,7 +678,7 @@ Ilustração Digital</a>
       <li>
         <div class="resource-icon">
           <a href="http://lattes.cnpq.br/8542486657160866" target="_blank">
-            <img src="http://servicosweb.cnpq.br/wspessoa/servletrecuperafoto?tipo=1&id=K4282913E6" alt="#" />
+            <img src="https://scontent.fcwb1-1.fna.fbcdn.net/v/t1.0-1/p240x240/14907158_10154679236012486_6361851245264864182_n.jpg?_nc_cat=102&_nc_ohc=KWpQ96hjyEgAQnR1wrlzc5PNQwV28nUEVqs3MViJe442s6ZdNxNlKOAdg&_nc_ht=scontent.fcwb1-1.fna&oh=f2793a75db598b44b05c18f46be12b58&oe=5EAC002E" alt="#" />
           </a>
         </div>
         <div class="resource-details">
@@ -693,7 +693,7 @@ Ilustração Digital</a>
       <li>
         <div class="resource-icon">
           <a href="https://www.escavador.com/sobre/3742162/anelise-bittencourt-gerceski" target="_blank">
-            <img src="http://servicosweb.cnpq.br/wspessoa/servletrecuperafoto?tipo=1&id=K4282913E6" alt="#" />
+            <img src="https://scontent.fcwb1-1.fna.fbcdn.net/v/t1.0-1/c3.3.314.314a/s240x240/11846626_10205576124976275_4785003177905832124_n.jpg?_nc_cat=102&_nc_ohc=-EcheDk5p7YAQk-4a-B8c2RyEmGd9K1zXP23Sp7p2E_WfXCzQ0O0yEtzg&_nc_ht=scontent.fcwb1-1.fna&oh=4b64a1ea7428f4a25c7f9aca957279fa&oe=5EAA1B8E" alt="#" />
           </a>
         </div>
         <div class="resource-details">
@@ -708,7 +708,7 @@ Ilustração Digital</a>
       <li>
         <div class="resource-icon">
           <a href="https://www.facebook.com/claudio.silva.92560" target="_blank">
-            <img src="http://servicosweb.cnpq.br/wspessoa/servletrecuperafoto?tipo=1&id=K4282913E6" alt="#" />
+            <img src="https://scontent.fcwb1-1.fna.fbcdn.net/v/t1.0-1/p240x240/13615121_10209696452506185_5182370009320878253_n.jpg?_nc_cat=110&_nc_ohc=YXyeESk7tJAAQn4Nay3p9q_0mpN-Q1bbVV28TyHzUcb54kt2ZRRMaPp4g&_nc_ht=scontent.fcwb1-1.fna&oh=18e31a7092a66f863d488f948145b170&oe=5EA8B5F1" alt="#" />
           </a>
         </div>
         <div class="resource-details">
@@ -723,7 +723,7 @@ Ilustração Digital</a>
       <li>
         <div class="resource-icon">
           <a href="https://repositorio.unesp.br/bitstream/handle/11449/89742/valente_el_me_bauru.pdf?sequence=1" target="_blank">
-            <img src="http://servicosweb.cnpq.br/wspessoa/servletrecuperafoto?tipo=1&id=K4282913E6" alt="#" />
+            <img src="../../base/images/eunice.jpg" alt="#" />
           </a>
         </div>
         <div class="resource-details">
@@ -738,7 +738,7 @@ Ilustração Digital</a>
       <li>
         <div class="resource-icon">
           <a href="http://lattes.cnpq.br/1855522649075854" target="_blank">
-            <img src="http://servicosweb.cnpq.br/wspessoa/servletrecuperafoto?tipo=1&id=K4282913E6" alt="#" />
+            <img src="http://servicosweb.cnpq.br/wspessoa/servletrecuperafoto?tipo=1&id=K4770059P0" alt="#" />
           </a>
         </div>
         <div class="resource-details">
@@ -799,7 +799,7 @@ Ilustração Digital</a>
       <li>
         <div class="resource-icon">
           <a href="http://lattes.cnpq.br/3174491883976462" target="_blank">
-            <img src="http://servicosweb.cnpq.br/wspessoa/servletrecuperafoto?tipo=1&id=K4282913E6" alt="#" />
+            <img src="https://scontent.fcwb1-1.fna.fbcdn.net/v/t1.0-1/p240x240/69609704_10221319672680745_4089498805043462144_n.jpg?_nc_cat=104&_nc_ohc=pbvCar-FVi8AQmoZuRHe5eX_zCv2UvbNlIkOgEoTcx43JFsiGT8aLseeQ&_nc_ht=scontent.fcwb1-1.fna&oh=49d2ce6a9a45a5f65ca3472804173dd7&oe=5EAB4C4D" alt="#" />
           </a>
         </div>
         <div class="resource-details">
@@ -814,7 +814,7 @@ Ilustração Digital</a>
       <li>
         <div class="resource-icon">
           <a href="http://lattes.cnpq.br/4024228122241936" target="_blank">
-            <img src="http://servicosweb.cnpq.br/wspessoa/servletrecuperafoto?tipo=1&id=K4282913E6" alt="#" />
+            <img src="https://scontent.fcwb1-1.fna.fbcdn.net/v/t1.0-1/p240x240/77022096_2807320899286433_8550644944140763136_n.jpg?_nc_cat=106&_nc_ohc=7HFzdIyKxjEAQnRwqJRSJ2dOnrWWRGNbm6NWu5pSg2PTN3BZmCcVVOGyg&_nc_ht=scontent.fcwb1-1.fna&oh=9886fe0e57eb1639f78d66e771202f82&oe=5EA1CBD9" alt="#" />
           </a>
         </div>
         <div class="resource-details">
@@ -829,7 +829,7 @@ Ilustração Digital</a>
       <li>
         <div class="resource-icon">
           <a href="https://pt.slideshare.net/smythe/t-c-c-apres-nelson-smythe" target="_blank">
-            <img src="http://servicosweb.cnpq.br/wspessoa/servletrecuperafoto?tipo=1&id=K4282913E6" alt="#" />
+            <img src="http://servicosweb.cnpq.br/wspessoa/servletrecuperafoto?tipo=1&id=K4138794Z2" alt="#" />
           </a>
         </div>
         <div class="resource-details">
@@ -844,7 +844,7 @@ Ilustração Digital</a>
       <li>
         <div class="resource-icon">
           <a href=" http://lattes.cnpq.br/0675607550446920" target="_blank">
-            <img src="http://servicosweb.cnpq.br/wspessoa/servletrecuperafoto?tipo=1&id=K4282913E6" alt="#" />
+            <img src="http://servicosweb.cnpq.br/wspessoa/servletrecuperafoto?tipo=1&id=K4487052A3" alt="#" />
           </a>
         </div>
         <div class="resource-details">
@@ -859,7 +859,7 @@ Ilustração Digital</a>
       <li>
         <div class="resource-icon">
           <a href=" http://lattes.cnpq.br/4894432754322418" target="_blank">
-            <img src="http://servicosweb.cnpq.br/wspessoa/servletrecuperafoto?tipo=1&id=K4282913E6" alt="#" />
+            <img src="https://scontent.fcwb1-1.fna.fbcdn.net/v/t1.0-1/p240x240/28168551_10209450554734355_5066591605130582357_n.jpg?_nc_cat=110&_nc_ohc=TXQMMD-PNWkAQktARIXZj1OeA9FevhKAq3XnIN849d_NhMdn7R2BKmnfA&_nc_ht=scontent.fcwb1-1.fna&oh=6593fc5bd895e210fc4fb55e795b8b5a&oe=5E9E127D" alt="#" />
           </a>
         </div>
         <div class="resource-details">
@@ -874,7 +874,7 @@ Ilustração Digital</a>
       <li>
         <div class="resource-icon">
           <a href="http://lattes.cnpq.br/9372742836979354" target="_blank">
-            <img src="http://servicosweb.cnpq.br/wspessoa/servletrecuperafoto?tipo=1&id=K4282913E6" alt="#" />
+            <img src="http://servicosweb.cnpq.br/wspessoa/servletrecuperafoto?tipo=1&id=K4770108J4" alt="#" />
           </a>
         </div>
         <div class="resource-details">
@@ -889,7 +889,7 @@ Ilustração Digital</a>
       <li>
         <div class="resource-icon">
           <a href="http://lattes.cnpq.br/2144891818437716" target="_blank">
-            <img src="http://servicosweb.cnpq.br/wspessoa/servletrecuperafoto?tipo=1&id=K4282913E6" alt="#" />
+            <img src="http://servicosweb.cnpq.br/wspessoa/servletrecuperafoto?tipo=1&id=K4772006E9" alt="#" />
           </a>
         </div>
         <div class="resource-details">
