Atualização página marketing

--- a/my/paginas/marketing/index.html
+++ b/my/paginas/marketing/index.html
@@ -322,24 +322,9 @@
       </li>
 
       <li>
-        <a href="https://rockcontent.com/guia/growth-hacking/?utm_content=44564483&utm_medium=social&utm_source=twitter" target="_blank">
-          <div class="resource-icon">
-            <img src="https://scontent.fcwb1-1.fna.fbcdn.net/v/t1.0-1/p200x200/49787266_2476772519004956_7464639180329451520_n.jpg?_nc_cat=110&_nc_ht=scontent.fcwb1-1.fna&oh=3a67f03b17998c8eff72ee8e93fc6a4e&oe=5D3DE845" alt="#" />
-          </div>
-        </a>
-        <div class="resource-details">
-          <h2>
-            <a href="https://rockcontent.com/guia/growth-hacking/?utm_content=44564483&utm_medium=social&utm_source=twitter" target="_blank">Growth Hacking: O Guia Definitivo</a>
-          </h2>
-          <p>Cresça em ritmo acelerado</p>
-        </div>
-        <a class="resource-button" href="https://rockcontent.com/guia/growth-hacking/?utm_content=44564483&utm_medium=social&utm_source=twitter" target="_blank">Veja</a>
-      </li>
-
-      <li>
         <a href="https://www.socialmediaexaminer.com/?utm_source=blog&utm_campaign=rc_blogpost" target="_blank">
           <div class="resource-icon">
-            <img src="https://scontent.fcwb1-1.fna.fbcdn.net/v/t1.0-1/p200x200/13015138_10154063645224383_1474127129629977999_n.png?_nc_cat=1&_nc_ht=scontent.fcwb1-1.fna&oh=b8b975f0eaabd769104ef5ce0898250d&oe=5D2BEA4E" alt="#" />
+            <img src="https://scontent.fcwb2-2.fna.fbcdn.net/v/t1.0-1/p320x320/12107129_10153622035399383_1373534565017675651_n.png?_nc_cat=110&_nc_ohc=MSUN-RRCxxEAQnlFOnlYJBi_fVLmhcN_HYGGHdW4v7VL9NEZrcOZRKvyg&_nc_ht=scontent.fcwb2-2.fna&oh=a3cde4cc190e9b8e8b002f004e4cb523&oe=5E973CFF" alt="#" />
           </div>
         </a>
         <div class="resource-details">
@@ -354,7 +339,7 @@
       <li>
         <a href="http://www.adrianogianini.com.br/materiais/curso-gratuito-checklist-novo-anunciante-no-adwords-obrigado/" target="_blank">
           <div class="resource-icon">
-            <img src="https://scontent.fcwb1-1.fna.fbcdn.net/v/t1.0-1/p200x200/13935078_702053786609082_7346245149366186700_n.png?_nc_cat=106&_nc_ht=scontent.fcwb1-1.fna&oh=128a493c8d771c2e929a85557f718674&oe=5D2F43A0" alt="#" />
+            <img src="../../base/images/portfolios.jpg" alt="#" />
           </div>
         </a>
         <div class="resource-details">
