--- a/my/paginas/marketing/index.html
+++ b/my/paginas/marketing/index.html
@@ -373,7 +373,7 @@
       <li>
         <a href="https://br.mautic.org" target="_blank">
           <div class="resource-icon">
-            <img src="https://pbs.twimg.com/profile_images/918197078081159169/Cv9FgWXU_400x400.jpg" alt="#" />
+            <img src="https://scontent.fcwb1-1.fna.fbcdn.net/v/t1.0-1/10583979_1537645006454853_5446066427502251888_n.png?_nc_cat=109&_nc_ohc=XEM9AtRUw-kAQmNwKbKKFygl1R56I0WiCKOJ5jpfNZTl9MuTL4kxzFUVA&_nc_ht=scontent.fcwb1-1.fna&oh=e2a89f40576fa7f6e92888acb2bdbb36&oe=5EA0973D" alt="#" />
           </div>
         </a>
         <div class="resource-details">
