--- a/my/paginas/marketing/index.html
+++ b/my/paginas/marketing/index.html
@@ -403,7 +403,7 @@
       <li>
         <a href="https://trello.com" target="_blank">
           <div class="resource-icon">
-            <img src="https://pbs.twimg.com/profile_images/1018858130090782720/gkRswKNd_400x400.jpg" alt="#" />
+            <img src="https://scontent.fcwb1-1.fna.fbcdn.net/v/t31.0-1/p320x320/20424264_1506678039410436_2666103600142426171_o.png?_nc_cat=100&_nc_ohc=Jg3-8y-xuKMAQnNq6OgKvkQW5Zcbk_XlYKKIvTysTUSDE_puObY_yZEOw&_nc_ht=scontent.fcwb1-1.fna&oh=dd74351884d0b9fa8c89b3007ec1dfd0&oe=5E9822B2" alt="#" />
           </div>
         </a>
         <div class="resource-details">
