--- a/my/paginas/design/index.html
+++ b/my/paginas/design/index.html
@@ -814,7 +814,7 @@ Ilustração Digital</a>
       <li>
         <div class="resource-icon">
           <a href="http://lattes.cnpq.br/4024228122241936" target="_blank">
-            <img src="https://scontent.fcwb1-1.fna.fbcdn.net/v/t1.0-1/p240x240/77022096_2807320899286433_8550644944140763136_n.jpg?_nc_cat=106&_nc_ohc=7HFzdIyKxjEAQnRwqJRSJ2dOnrWWRGNbm6NWu5pSg2PTN3BZmCcVVOGyg&_nc_ht=scontent.fcwb1-1.fna&oh=9886fe0e57eb1639f78d66e771202f82&oe=5EA1CBD9" alt="#" />
+            <img src="https://www.facebook.com/search/async/profile_picture/?fbid=100000256500555&width=72&height=72" alt="#" />
           </a>
         </div>
         <div class="resource-details">
