--- a/my/paginas/marketing/index.html
+++ b/my/paginas/marketing/index.html
@@ -418,7 +418,7 @@
       <li>
         <a href="https://www.wunderlist.com/pt/" target="_blank">
           <div class="resource-icon">
-            <img src="https://scontent.fcwb1-1.fna.fbcdn.net/v/t1.0-1/p200x200/10527513_716367458435177_3415168436016874663_n.png?_nc_cat=106&_nc_ht=scontent.fcwb1-1.fna&oh=0b878fb4d95d2680142db872715af475&oe=5D2C587F" alt="#" />
+            <img src="https://scontent.fbfh14-2.fna.fbcdn.net/v/t1.0-1/p320x320/10527513_716367458435177_3415168436016874663_n.png?_nc_cat=106&_nc_ohc=0JwV7BaJPeIAX9Ic2qT&_nc_ht=scontent.fbfh14-2.fna&oh=2a42f68af2b6cc2a80377bb8166981e8&oe=5EB11310" alt="#" />
           </div>
         </a>
         <div class="resource-details">
