--- a/my/paginas/design/index.html
+++ b/my/paginas/design/index.html
@@ -678,7 +678,7 @@ Ilustração Digital</a>
       <li>
         <div class="resource-icon">
           <a href="http://lattes.cnpq.br/8542486657160866" target="_blank">
-            <img src="https://scontent.fcwb1-1.fna.fbcdn.net/v/t1.0-1/p240x240/14907158_10154679236012486_6361851245264864182_n.jpg?_nc_cat=102&_nc_ohc=KWpQ96hjyEgAQnR1wrlzc5PNQwV28nUEVqs3MViJe442s6ZdNxNlKOAdg&_nc_ht=scontent.fcwb1-1.fna&oh=f2793a75db598b44b05c18f46be12b58&oe=5EAC002E" alt="#" />
+            <img src="https://scontent.fbfh14-1.fna.fbcdn.net/v/t1.0-1/p240x240/14907158_10154679236012486_6361851245264864182_n.jpg?_nc_cat=102&_nc_ohc=i7dizP35AaAAX9cCHR_&_nc_ht=scontent.fbfh14-1.fna&_nc_tp=1&oh=5c5516efdb76fb2921e1ff66aacfc771&oe=5EAC002E" alt="#" />
           </a>
         </div>
         <div class="resource-details">
@@ -693,7 +693,7 @@ Ilustração Digital</a>
       <li>
         <div class="resource-icon">
           <a href="https://www.escavador.com/sobre/3742162/anelise-bittencourt-gerceski" target="_blank">
-            <img src="https://scontent.fcwb1-1.fna.fbcdn.net/v/t1.0-1/c3.3.314.314a/s240x240/11846626_10205576124976275_4785003177905832124_n.jpg?_nc_cat=102&_nc_ohc=-EcheDk5p7YAQk-4a-B8c2RyEmGd9K1zXP23Sp7p2E_WfXCzQ0O0yEtzg&_nc_ht=scontent.fcwb1-1.fna&oh=4b64a1ea7428f4a25c7f9aca957279fa&oe=5EAA1B8E" alt="#" />
+            <img src="https://scontent.fbfh14-1.fna.fbcdn.net/v/t1.0-1/c3.3.314.314a/s240x240/11846626_10205576124976275_4785003177905832124_n.jpg?_nc_cat=102&_nc_ohc=yqFGpKs5l3QAX9kppLR&_nc_ht=scontent.fbfh14-1.fna&_nc_tp=1&oh=902f73bf433dc538b9a3849507088905&oe=5EAA1B8E" alt="#" />
           </a>
         </div>
         <div class="resource-details">
