Atualização perfil do instrutor

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -3251,7 +3251,7 @@
       <li>
         <a href="http://www.decoverri.com/" target="_blank">
           <div class="resource-icon">
-            <img src="http://s.gravatar.com/avatar/909c83577636c1a7de9a65b1b741876d?s=200" alt="#" />
+            <img src="https://avatars2.githubusercontent.com/u/1951182?s=460&v=4" alt="#" />
           </div>
         </a>
         <div class="resource-details">
