--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -436,7 +436,22 @@
           </h2>
           <p>Comparação entre Sass e Less</p>
         </div>
-        <a class="resource-button" href="https://gist.github.com/chriseppstein/674726" target="_blank">Veja</a>
+        <a class="resource-button" href="https://gist.github.com/chriseppstein/674726" target="_blank">Veja</a>        
+      </li>
+
+      <li>
+        <a href="https://www.ninjaunits.com/converters/pixels/pixels-rem/" target="_blank">
+          <div class="resource-icon">
+            <img src="../../base/images/portfolios.jpg" alt="#" />
+          </div>
+        </a>
+        <div class="resource-details">
+          <h2>
+            <a href="https://www.ninjaunits.com/converters/pixels/pixels-rem/" target="_blank">Ninja Units</a>
+          </h2>
+          <p>Convert Px to Rem</p>
+        </div>
+        <a class="resource-button" href="https://www.ninjaunits.com/converters/pixels/pixels-rem/" target="_blank">Veja</a>
         <div id="bibliotecas"></div>
       </li>
 
