FontBase - Font Management

--- a/my/paginas/apoio/index.html
+++ b/my/paginas/apoio/index.html
@@ -151,6 +151,19 @@
 
 			<li>
 				<div class="resource-icon">
+					<a href="https://fontba.se/" target="_blank">
+						<img src="../../base/images/portfolios.jpg" alt="Font Squirrel" />
+					</a>
+				</div>
+				<div class="resource-details">
+					<h2> <a href="https://fontba.se/" target="_blank">FontBase</a> </h2>
+					<p>Font management. Perfected.</p>
+				</div>
+				<a class="resource-button" href="https://fontba.se/" target="_blank">Veja</a>
+			</li>
+
+			<li>
+				<div class="resource-icon">
 					<a href="http://www.wordmark.it/" target="_blank">
 						<img src="../../base/images/wordmark.jpg" alt="Wordmark Visualizador de fontes" />
 					</a>
