Responsive Breakpointes Results

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -324,8 +324,22 @@
           </h2>
           <p>Botões com animação prontos para uso</p>
         </div>
-        <a class="resource-button" href="https://emilkowalski.github.io/css-effects-snippets/?fbclid=IwAR3nKQxwHeJ4vYehmLkqo4Ra0Lx8F8dCJSqQJQxoPPHc_bdep41F1DSXEDY" target="_blank">Veja</a>
-        <div id="css"></div>
+        <a class="resource-button" href="https://emilkowalski.github.io/css-effects-snippets/?fbclid=IwAR3nKQxwHeJ4vYehmLkqo4Ra0Lx8F8dCJSqQJQxoPPHc_bdep41F1DSXEDY" target="_blank">Veja</a>        
+      </li> 
+
+      <li>
+        <a href="https://responsivebreakpoints.com/" target="_blank">
+          <div class="resource-icon">
+            <img src="../../base/images/portfolios.jpg" alt="#" />
+          </div>
+        </a>
+        <div class="resource-details">
+          <h2>
+            <a href="https://responsivebreakpoints.com/" target="_blank">Responsive Breakpoints Results</a>
+          </h2>
+          <p>Responsive Image Breakpoints Generator</p>
+        </div>
+        <a class="resource-button" href="https://responsivebreakpoints.com/" target="_blank">Veja</a>        
       </li> 
 
       <li>
