--- a/index.html
+++ b/index.html
@@ -50,15 +50,16 @@
 <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700,800,600,300" rel="stylesheet" type="text/css">
 <script type="text/javascript" src="js/modernizr.custom.js"></script>
 
+<!-- Loader 
+    ========================================= -->
 <link rel="stylesheet" href="css/paceloader.css">
 <script type="text/javascript" src="js/pace.js"></script>
 
 
 </head>
+
 <body>
-<!-- <div id="preloader">
-  <div id="status"> <img src="img/preloader.gif" height="64" width="64" alt=""> </div>
-</div> -->
+
 <div class="front-image"></div>
 
 <!-- Navigation
