--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -701,6 +701,21 @@
       </li>
 
       <li>
+        <a href="https://material-ui.com/pt/" target="_blank">
+          <div class="resource-icon">
+            <img src="https://material-ui.com/static/logo_raw.svg" alt="#" />
+          </div>
+        </a>
+        <div class="resource-details">
+          <h2>
+            <a href="https://material-ui.com/pt/" target="_blank">Material UI</a>
+          </h2>
+          <p>Componentes React para um desenvolvimento mais rápido e fácil.</p>
+        </div>
+        <a class="resource-button" href="https://material-ui.com/pt/" target="_blank">Veja</a>
+      </li>
+
+      <li>
         <a href="https://michalsnik.github.io/aos/" target="_blank">
           <div class="resource-icon">
             <img src="../../base/images/portfolios.jpg" alt="#" />
