--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -1808,11 +1808,11 @@
           <h2>
             <a href="https://github.com/kamranahmedse/developer-roadmap" target="_blank">Road Map Web Developer</a>
           </h2>
-          <p>Web developer in 2019 | <a href="https://codeburst.io/the-2018-web-developer-roadmap-826b1b806e8d" target="_blank"><mark>Artigo Medium</mark></a></p>
+          <p>Roadmap to becoming a web developer in 2020 | <a href="https://codeburst.io/the-2018-web-developer-roadmap-826b1b806e8d" target="_blank"><mark>Artigo Medium</mark></a></p>
         </div>
         <a class="resource-button" href="https://github.com/kamranahmedse/developer-roadmap" target="_blank">Veja</a>
       </li>
-    
+          
       <li>
         <a href="https://github.com/adam-golab/react-developer-roadmap/blob/master/README-PTBR.md" target="_blank">
           <div class="resource-icon">
@@ -1826,6 +1826,21 @@
           <p>Guia do desenvolvedor React em 2019</p>
         </div>
         <a class="resource-button" href="https://github.com/adam-golab/react-developer-roadmap/blob/master/README-PTBR.md" target="_blank">Veja</a>
+      </li>
+
+      <li>
+        <a href="https://free-for.dev/" target="_blank">
+          <div class="resource-icon">
+            <img src="../../base/images/portfolios.jpg" alt="#" />
+          </div>
+        </a>
+        <div class="resource-details">
+          <h2>
+            <a href="https://free-for.dev/" target="_blank">Free for Dev</a>
+          </h2>
+          <p>Dev favoritos</p>
+        </div>
+        <a class="resource-button" href="https://free-for.dev/" target="_blank">Veja</a>
       </li>
 
       <li>
