Digital Innovation One

--- a/my/paginas/apoio/index.html
+++ b/my/paginas/apoio/index.html
@@ -1948,6 +1948,19 @@
 				</div>
 				<a class="resource-button" href="https://www.learncafe.com/cursos" target="_blank">Veja</a>
 			</li>
+			
+			<li>
+				<a href="https://digitalinnovation.one/" target="_blank">
+					<div class="resource-icon">
+						<img src="https://scontent.fcwb2-1.fna.fbcdn.net/v/t1.0-1/p200x200/51768489_2216868438642807_3460762326448209920_n.png?_nc_cat=103&_nc_eui2=AeEMXQBTIwosTepssSy33jgG4l_0ek6Tq3nA6Bf-0Cuw20ZX07iPrjKGrnFoabFT96ElYZetwFgRISie1bat1W2GM050eLxdBtCfJyuUmUEL8g&_nc_ohc=7RkhjVQFLWkAX-HODfU&_nc_ht=scontent.fcwb2-1.fna&oh=76fd469ea1e68117272fcdb7270f98a8&oe=5EFCE527" alt="Cursos" />					
+					</div>
+				</a>
+				<div class="resource-details">
+					<h2> <a href="https://digitalinnovation.one/" target="_blank">Digital Innovation One</a> </h2>
+					<p>Cursos Free</p>
+				</div>
+				<a class="resource-button" href="https://digitalinnovation.one/" target="_blank">Veja</a>
+			</li>
 		
 
 			<div id="atalhos"></div>
