Atualização sessão cursos da página Apoio, acrescentado Digital Innovation One e BitDegree

--- a/my/paginas/apoio/index.html
+++ b/my/paginas/apoio/index.html
@@ -1900,7 +1900,7 @@
 			<li>
 				<a href="https://cursos.timtec.com.br/" target="_blank">
 					<div class="resource-icon">
-						<img src="https://scontent.fbfh14-2.fna.fbcdn.net/v/t1.0-1/p320x320/12993353_909861422444529_6773033912990293596_n.jpg?_nc_cat=106&_nc_ohc=8Mkh6v7pH2oAQnRtK_bK6LZGCWY7r-Glt9MnI-bNbCaMBo0CwD4OnDpig&_nc_ht=scontent.fbfh14-2.fna&oh=71a0300c142eddec496bd2d1600962e2&oe=5E7C3FA1" alt="Cursos" />
+						<img src="https://scontent.fcwb2-1.fna.fbcdn.net/v/t1.0-1/p480x480/12993353_909861422444529_6773033912990293596_n.jpg?_nc_cat=106&_nc_eui2=AeH0UZ-VFacSkm-QanrcOs1k82Ccfo2xaxMV2zsNWu9FZtdFDAXgSywCvDLSRc0O2bDKZXDquDqSEk7nv4ghtFHcCFlX8VsQD1f9l2Fnu_MPBg&_nc_ohc=15qioByyGtIAX-X7Uye&_nc_ht=scontent.fcwb2-1.fna&_nc_tp=6&oh=c7d4f53d208774ca8d026c646bf4106f&oe=5EC01FFB" alt="Cursos" />
 					</div>
 				</a>
 				<div class="resource-details">
@@ -1913,7 +1913,7 @@
 			<li>
 				<a href="https://www.cursoemvideo.com" target="_blank">
 					<div class="resource-icon">
-						<img src="https://scontent.fbfh14-1.fna.fbcdn.net/v/t1.0-1/p320x320/61690540_2233291130073529_4797694330393329664_o.jpg?_nc_cat=108&_nc_ohc=VjtTSjJMllUAQn52AWhYkMHA1aEZeloMZHbqwfwuQcUGyW-JbpnuXy1XA&_nc_ht=scontent.fbfh14-1.fna&oh=367363356a0da680bd716db0b4c278c9&oe=5E6C9323" alt="Cursos" />					
+						<img src="https://scontent.fcwb2-2.fna.fbcdn.net/v/t1.0-1/p480x480/82531687_2666904856712152_5829601562317553664_o.png?_nc_cat=100&_nc_eui2=AeGT_1VwjBgb4Xh6PZEkCEjBhpFzp0SYglwO1e6mNXb8iCUXJYDNnDu9xhRUgkdgLYwkJTsf9OICC3at5J1l5LedzgxWjU8ZgNIiAxEICZyxYw&_nc_ohc=LXlFXqMo4TwAX8YhKYx&_nc_ht=scontent.fcwb2-2.fna&oh=1890cc46777fcd976e73ed015ef2f2e4&oe=5EF15D2D" alt="Cursos" />					
 					</div>
 				</a>
 				<div class="resource-details">
@@ -1926,12 +1926,12 @@
 			<li>
 				<div class="resource-icon">
 					<a href="https://alison.com/courses" target="_blank">
-						<img src="https://scontent.fbfh14-1.fna.fbcdn.net/v/t1.0-1/p200x200/17800468_1520203558014335_5592717726884957228_n.png?_nc_cat=107&_nc_ohc=HU7p_dbs-hQAQm2fS-DSLzIJLkgE3rFdv1_c4BAausAWYOijguhhjkJhg&_nc_ht=scontent.fbfh14-1.fna&oh=321bccc42cb2561f0c224b5615a423c1&oe=5E764D92" alt="Cursos" />
+						<img src="https://scontent.fcwb2-2.fna.fbcdn.net/v/t1.0-1/p480x480/17800468_1520203558014335_5592717726884957228_n.png?_nc_cat=107&_nc_eui2=AeFHurYUjrHc2FzDIKPE8G3TwCcerDcZTQGmthZOskw-1NVYeM87t5Mhk-RQVcLoOdG1BY6c6UdYJtFJ4PhkcxXf8uJjDCwIlLHofBRDavnq4w&_nc_ohc=ARzxLoQchiAAX-uFTTr&_nc_ht=scontent.fcwb2-2.fna&oh=fc46b1023ad42b195e6f3e03010e5852&oe=5EFBAF7E" alt="Cursos" />
 					</a>
 				</div>
 				<div class="resource-details">
 					<h2> <a href="https://alison.com/courses" target="_blank">Alison</a> </h2>
-					<p>Cursos Free</p>
+					<p>Cursos Free e pagos</p>
 				</div>
 				<a class="resource-button" href="https://alison.com/courses" target="_blank">Veja</a>
 			</li>
@@ -1939,12 +1939,12 @@
 			<li>
 				<a href="https://www.learncafe.com/cursos" target="_blank">
 					<div class="resource-icon">
-						<img src="https://scontent.fbfh14-1.fna.fbcdn.net/v/t1.0-1/p200x200/19274859_1574479229276495_2862538952386405924_n.png?_nc_cat=111&_nc_ohc=MId738n-DJIAQnk3keAbRHp-7SJMjAQYylbT6BvT3B9TpeDt846Sj44wQ&_nc_ht=scontent.fbfh14-1.fna&oh=c1c07a8e69228ed471ac388b0fd4f621&oe=5E88981E" alt="Cursos" />					
+						<img src="https://scontent.fcwb2-2.fna.fbcdn.net/v/t1.0-1/19274859_1574479229276495_2862538952386405924_n.png?_nc_cat=111&_nc_eui2=AeG-s9p9537WN_8L7OTkh1Y2yZOD0PiHJ8zNwyNPmLeOmYH01RuyOJrTD1bcTVO8tVPa_gSuGnbnCn2N80RpiVEIaZ8jvaiTnGnZOnDjseUFbw&_nc_ohc=vAJ2gmIBMv4AX_4i9os&_nc_ht=scontent.fcwb2-2.fna&oh=782cbe9a86a195d97ecaadcf8a9e7524&oe=5EFDEB13" alt="Cursos" />					
 					</div>
 				</a>
 				<div class="resource-details">
 					<h2> <a href="https://www.learncafe.com/cursos" target="_blank">Learncafe</a> </h2>
-					<p>Cursos Free</p>
+					<p>Cursos Free e pagos</p>
 				</div>
 				<a class="resource-button" href="https://www.learncafe.com/cursos" target="_blank">Veja</a>
 			</li>
@@ -1960,6 +1960,19 @@
 					<p>Cursos Free</p>
 				</div>
 				<a class="resource-button" href="https://digitalinnovation.one/" target="_blank">Veja</a>
+			</li>
+			
+			<li>
+				<a href="https://bitdegree.org" target="_blank">
+					<div class="resource-icon">
+						<img src="https://scontent.fcwb2-2.fna.fbcdn.net/v/t1.0-1/p480x480/62500920_425639414686982_6571372294424231936_o.jpg?_nc_cat=110&_nc_eui2=AeGyXklvpkV0P3evi5-BtlgSzd_AOFVJQRIob528xUgXDFvQ_FXvgXiKVY7VoE2oaujVM_w-EEjMFljmCZ489LNOvHSWpcpsOAVtoP6o62FC-A&_nc_ohc=18ugBv65AFoAX_mOiO9&_nc_ht=scontent.fcwb2-2.fna&_nc_tp=6&oh=3536f21e2c8fd439a95932539ad31b20&oe=5EEE040E" alt="Cursos" />					
+					</div>
+				</a>
+				<div class="resource-details">
+					<h2> <a href="https://bitdegree.org" target="_blank">Bit Degree</a> </h2>
+					<p>Cursos Free e pagos</p>
+				</div>
+				<a class="resource-button" href="https://bitdegree.org" target="_blank">Veja</a>
 			</li>
 		
 
