Diferenças do novo React Navigation v5

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -354,7 +354,22 @@
           </h2>
           <p>Slider Animado</p>
         </div>
-        <a class="resource-button" href="https://github.com/rcaferati/react-awesome-slider?fbclid=IwAR13-s76qtkRInWr58Rq7P1bGapbkbwCe6F11i7r1Oa-U5TWiphOUZqdIiI" target="_blank">Veja</a>
+        <a class="resource-button" href="https://github.com/rcaferati/react-awesome-slider?fbclid=IwAR13-s76qtkRInWr58Rq7P1bGapbkbwCe6F11i7r1Oa-U5TWiphOUZqdIiI" target="_blank">Veja</a>        
+      </li> 
+
+      <li>
+        <a href="https://medium.com/@claudio.199644/diferen%C3%A7as-do-novo-react-navigation-v5-99a1ae5139d2" target="_blank">
+          <div class="resource-icon">
+            <img src="../../base/images/portfolios.jpg" alt="#" />
+          </div>
+        </a>
+        <div class="resource-details">
+          <h2>
+            <a href="https://medium.com/@claudio.199644/diferen%C3%A7as-do-novo-react-navigation-v5-99a1ae5139d2" target="_blank">Diferenças do novo React Navigation v5</a>
+          </h2>
+          <p>React Navigation v5</p>
+        </div>
+        <a class="resource-button" href="https://medium.com/@claudio.199644/diferen%C3%A7as-do-novo-react-navigation-v5-99a1ae5139d2" target="_blank">Veja</a>
         <div id="css"></div>
       </li> 
 
