--- a/my/paginas/ux/index.html
+++ b/my/paginas/ux/index.html
@@ -305,6 +305,21 @@
         <a class="resource-button" href="https://kanboard.org/" target="_blank">Veja</a>
       </li>
 
+      <li>
+        <a href="https://whimsical.com/" target="_blank">
+          <div class="resource-icon">
+            <img src="../../base/images/portfolios.jpg" alt="#" />          
+          </div>
+        </a>
+        <div class="resource-details">
+          <h2>
+            <a href="https://whimsical.com/" target="_blank">Whimsical</a>
+          </h2>
+          <p>Flowcharts, Wireframes, Sticky Notes, Mind Maps</p>
+        </div>
+        <a class="resource-button" href="https://whimsical.com/" target="_blank">Veja</a>
+      </li>
+
       <div class="linha"></div>
       <h2 class="margen-titulo color-design">Prototipagem</h2>
       <div class="linha"></div>
