Social Blade - Analytics made easy

--- a/my/paginas/marketing/index.html
+++ b/my/paginas/marketing/index.html
@@ -523,6 +523,22 @@
         </div>
         <a class="resource-button" href="https://iabbrasil.com.br/pesquisa-digital-adspend-2019/" target="_blank">Veja</a>
       </li>
+      
+      <li>
+        <a href="https://socialblade.com/" target="_blank">
+          <div class="resource-icon">
+            <img src="../../base/images/portfolios.jpg" alt="#" />
+          </div>
+        </a>
+        <div class="resource-details">
+          <h2>
+            <a href="https://socialblade.com/" target="_blank">Social Blade</a>
+          </h2>
+          <p>Social Blade tracks user statistics for YouTube, Twitch, Instagram, and Twitter!
+            Get a deeper understanding of user growth and trends by utilizing Social Blade</p>
+        </div>
+        <a class="resource-button" href="https://socialblade.com/" target="_blank">Veja</a>
+      </li>
 
 
       <div class="linha"></div>
