Market Watch - A hub for markets new and investing ideas

--- a/my/paginas/marketing/index.html
+++ b/my/paginas/marketing/index.html
@@ -593,7 +593,7 @@
       <li>
         <a href="https://simplywall.st/about" target="_blank">
           <div class="resource-icon">
-            <img src="https://scontent.fbfh14-2.fna.fbcdn.net/v/t31.0-1/p320x320/1890586_546999775430912_4349664359674472981_o.png?_nc_cat=103&_nc_sid=dbb9e7&_nc_ohc=ajuQFa5JYAQAX8feVPW&_nc_ht=scontent.fbfh14-2.fna&oh=c61eccb91ff86fdaac4334525c7fc8d5&oe=5E97FBBC" alt="#" />
+            <img src="https://scontent.fbfh14-2.fna.fbcdn.net/v/t31.0-1/p320x320/1890586_546999775430912_4349664359674472981_o.png?_nc_cat=103&_nc_sid=dbb9e7&_nc_ohc=ajuQFa5JYAQAX8feVPW&_nc_ht=scontent.fbfh14-2.fna&oh=c61eccb91ff86fdaac4334525c7fc8d5&oe=5E97FBBCit" alt="#" />
           </div>
         </a>
         <div class="resource-details">
@@ -603,6 +603,21 @@
           <p>we help you make informed decisions by giving you access to institional quality data and analysis presented visually</p>
         </div>
         <a class="resource-button" href="https://simplywall.st/about" target="_blank">Veja</a>
+      </li>
+            
+      <li>
+        <a href="https://www.marketwatch.com/" target="_blank">
+          <div class="resource-icon">
+            <img src="https://scontent.fbfh14-2.fna.fbcdn.net/v/t31.0-1/p320x320/12768328_10153561039566848_8671990754845590351_o.png?_nc_cat=1&_nc_sid=dbb9e7&_nc_ohc=n1DDHz_9PbwAX_PPfZ0&_nc_ht=scontent.fbfh14-2.fna&oh=da3b59be258c7ac392f22ca90df47414&oe=5E9A4DFF" alt="#" />
+          </div>
+        </a>
+        <div class="resource-details">
+          <h2>
+            <a href="https://www.marketwatch.com/" target="_blank">Market Watch</a>
+          </h2>
+          <p>A hub for markets news and investing ideas.</p>
+        </div>
+        <a class="resource-button" href="https://www.marketwatch.com/" target="_blank">Veja</a>
       </li>
 
       <div class="linha"></div>
