Morning Star - Investimento

--- a/my/paginas/marketing/index.html
+++ b/my/paginas/marketing/index.html
@@ -593,7 +593,7 @@
       <li>
         <a href="https://simplywall.st/about" target="_blank">
           <div class="resource-icon">
-            <img src="https://scontent.fbfh14-2.fna.fbcdn.net/v/t31.0-1/p320x320/1890586_546999775430912_4349664359674472981_o.png?_nc_cat=103&_nc_sid=dbb9e7&_nc_ohc=ajuQFa5JYAQAX8feVPW&_nc_ht=scontent.fbfh14-2.fna&oh=c61eccb91ff86fdaac4334525c7fc8d5&oe=5E97FBBCit" alt="#" />
+            <img src="../../base/images/portfolios.jpg" alt="#" />
           </div>
         </a>
         <div class="resource-details">
@@ -618,6 +618,21 @@
           <p>A hub for markets news and investing ideas.</p>
         </div>
         <a class="resource-button" href="https://www.marketwatch.com/" target="_blank">Veja</a>
+      </li>
+            
+      <li>
+        <a href="https://www.morningstar.com/" target="_blank">
+          <div class="resource-icon">
+            <img src="../../base/images/portfolios.jpg" alt="#" />
+          </div>
+        </a>
+        <div class="resource-details">
+          <h2>
+            <a href="https://www.morningstar.com/" target="_blank">Morning Start</a>
+          </h2>
+          <p>Investimento</p>
+        </div>
+        <a class="resource-button" href="https://www.morningstar.com/" target="_blank">Veja</a>
       </li>
 
       <div class="linha"></div>
