--- a/my/paginas/apoio/index.html
+++ b/my/paginas/apoio/index.html
@@ -1987,6 +1987,19 @@
 				</div>
 				<a class="resource-button" href="https://bitdegree.org" target="_blank">Veja</a>
 			</li>
+			
+			<li>
+				<a href="https://www.ev.org.br/" target="_blank">
+					<div class="resource-icon">
+						<img src="https://scontent.fcwb2-2.fna.fbcdn.net/v/t1.0-1/p320x320/59713581_309923663241308_8110430501610717184_o.jpg?_nc_cat=108&_nc_sid=dbb9e7&_nc_ohc=YXzb-1yj3OAAX822Nvx&_nc_ht=scontent.fcwb2-2.fna&_nc_tp=6&oh=bc2c39800cde1a309cba2db637488f35&oe=5EA1037D" alt="Cursos" />					
+					</div>
+				</a>
+				<div class="resource-details">
+					<h2> <a href="https://www.ev.org.br/" target="_blank">Fundação Bradesco</a> </h2>
+					<p>Escola Virtual</p>
+				</div>
+				<a class="resource-button" href="https://www.ev.org.br/" target="_blank">Veja</a>
+			</li>
 		
 
 			<div id="atalhos"></div>
