Sebrae - Cursos Online

--- a/my/paginas/apoio/index.html
+++ b/my/paginas/apoio/index.html
@@ -2000,6 +2000,19 @@
 				</div>
 				<a class="resource-button" href="https://www.ev.org.br/" target="_blank">Veja</a>
 			</li>
+			
+			<li>
+				<a href="https://www.sebrae.com.br/sites/PortalSebrae/cursosonline" target="_blank">
+					<div class="resource-icon">
+						<img src="https://scontent.fcwb2-2.fna.fbcdn.net/v/t1.0-1/15823063_658816224289753_6675418139788142672_n.jpg?_nc_cat=111&_nc_sid=dbb9e7&_nc_ohc=ERuuCPZmMx4AX92-J2K&_nc_ht=scontent.fcwb2-2.fna&oh=ed706136218a12f30bbeb51f9ee55f09&oe=5E9F954E" alt="Cursos" />					
+					</div>
+				</a>
+				<div class="resource-details">
+					<h2> <a href="https://www.sebrae.com.br/sites/PortalSebrae/cursosonline" target="_blank">Sebrae</a> </h2>
+					<p>Cursos Online</p>
+				</div>
+				<a class="resource-button" href="https://www.sebrae.com.br/sites/PortalSebrae/cursosonline" target="_blank">Veja</a>
+			</li>
 		
 
 			<div id="atalhos"></div>
