A checklist to improve your product

--- a/my/paginas/ux/index.html
+++ b/my/paginas/ux/index.html
@@ -1101,6 +1101,23 @@ and share your amazing creations in a matter of minutes.</p>
         </div>
         <a class="resource-button" href="http://www.wireframeshowcase.com/" target="_blank">Veja</a>
       </li>
+      </li>
+
+      <li>
+        <div class="resource-icon">
+          <a href="https://uxdesign.cc/how-to-improve-your-product-ui-designers-checklist-58510947e6ab" target="_blank">
+            <img src="../../base/images/portfolios.jpg" alt="#" />
+          </a>
+        </div>
+        <div class="resource-details">
+          <h2>
+            <a href="https://uxdesign.cc/how-to-improve-your-product-ui-designers-checklist-58510947e6ab" target="_blank">A checklist to improve your product UI
+            </a>
+          </h2>
+          <p>UX Collective</p>
+        </div>
+        <a class="resource-button" href="https://uxdesign.cc/how-to-improve-your-product-ui-designers-checklist-58510947e6ab" target="_blank">Veja</a>
+      </li>
 
     </ul>
       <ul class="sidebar-navigation">
